Nested parent style

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
 
   <h1 class="blue">SCSS course</h1>
 
+  <div class="hulk-container">
+    <div class="hulk">
+      <img src="https://upload.wikimedia.org/wikipedia/en/5/59/Hulk_%28comics_character%29.png" alt="Hulk" title="Hulk">
+    </div>
+    <div class="description">
+      <div class="header">
+        Hulk 
+        <a class="description-link" href="https://fr.wikipedia.org/wiki/Hulk">stuff</a>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
